:bug: on mobile cleaned set medias done form updated :zap: :skull:

--- a/src/components/components/Form/InputCheckbox/styles.css
+++ b/src/components/components/Form/InputCheckbox/styles.css
@@ -69,3 +69,9 @@
     appearance: none;
     padding: 4px !important;
 }
+
+@media(max-width:320px){
+  input{
+    width:150px;
+  }
+}
